  * Update debian/qt4-dev-tools.install: add qvfb binary and the translations.
  * Update debian/rules:
    - add -qvfb configure option.
    - add -audio-backend option.
    - remove qm target call. It isn't needed anymore.
    - bump debhelper build dependency to version 0.4.13 to properly support dh
      options.
    - enable parallel build by passing --parallel option to dh.
  * Update debian/libphonon-dev.install: Include headers have been changed.
    The only official method for including Phonon headers is <phonon/ClassName>
    or <phonon/classname.h>.
  * Add a manpage fo qdbus. Thanks to Andreas Marschke. (Closes: #568186)

  [ Pino Toscano ]
  * Update debian/control: Don't build-depends on libasound2-dev for
    GNU/kFreeBSD and GNU/Hurd architectures.
  * Add 81_hurd_architecture.diff: recognize the proper architecture on
    GNU/Hurd. This will make Qt BIC there, but we can live with that.
  * Add 82_hurd_SA_SIGINFO.diff: fix FTBFS on GNU/Hurd causes by unconditional
    usage of SA_SIGINFO.
  * Adapt watch file to the new file names of the Qt/X11 tarballs.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 15 Feb 2010 14:11:37 +0100

qt4-x11 (4:4.6.0-1) experimental; urgency=low

  * New upstream release.

  +++ Changes by Fathi Boudra:

  * Add french translations.
  * Merge with Kubuntu: add libqt4-sql-tds plugin.

  +++ Changes by Frederik Schwarzer:

  * Fix typos in package descriptions.
    (Closes: #557397, #557396, #557374, #557375, #557376)

 -- Fathi Boudra <fabo@debian.org>  Tue, 01 Dec 2009 14:07:47 +0100

qt4-x11 (4:4.6.0~rc1-1) experimental; urgency=low

  * New upstream release.
  * Remove kde-qt patches:
    - 0288-more-x-keycodes - merged upstream.
  * Update debian/libqt4-dev.install: update installed files.

 -- Fathi Boudra <fabo@debian.org>  Tue, 17 Nov 2009 12:12:36 +0100

qt4-x11 (4:4.6.0~beta1-1) experimental; urgency=low

  * New upstream release.
  * Refresh qt-copy patches: 0180 and 209.